add tradition and blogs page