@@ -34,18 +34,18 @@ public class MyConfiguration implements WebMvcConfigurer {
 
 
 
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//      CorsConfiguration configuration = new CorsConfiguration();
-//      configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-//      configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//      configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-//      configuration.setExposedHeaders(List.of("Authorization"));
-//      configuration.setAllowCredentials(true);
-//      UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//      source.registerCorsConfiguration("/**", configuration);
-//      return source;
-//    }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+      CorsConfiguration configuration = new CorsConfiguration();
+      configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+      configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+      configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+      configuration.setExposedHeaders(List.of("Authorization"));
+      configuration.setAllowCredentials(true);
+      UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+      source.registerCorsConfiguration("/**", configuration);
+      return source;
+    }
 
 
   }
